--- a/src/style/global_style.css
+++ b/src/style/global_style.css
@@ -10,11 +10,41 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--body-font);
+}
+
+/* Overview */
+.overview-page {
+    height: 100vh;
+    width: 100%;
+    background-image: url(/public/over.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.layer {
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(174, 227, 252, 0.712);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 }
 
 /* RootLayout */
 main {
     padding-block: 2rem;
+}
+
+/* Header */
+nav {
+    padding-inline-start: 1rem;
+    padding-inline-end: 3rem;
+}
+
+/* Categories */
+.category-page {
+    border: 2px solid black;
 }
 
 /* Home Page */
@@ -25,6 +55,7 @@ main {
 /* Banner */
 .banner-page h2 {
     margin-bottom: 0.8rem;
+    font-family: var(--primary-font);
 }
 
 .backdrop-image {
@@ -36,13 +67,25 @@ main {
 .popular-shows {
     padding-left: 1rem;
     margin-block: 0.5rem;
-    font-family: var(--body-font);
+    font-family: var(--primary-font);
+
 }
 
 .movie-case h5,
 .show-case h5 {
     text-align: center;
-    font-family: var(--body-font);
+    font-family: var(--primary-font);
+
+}
+
+.movie-case img,
+.show-case img {
+    transition: 0.3s;
+}
+
+.movie-case img:hover,
+.show-case img:hover {
+    border: 5px solid transparent;
 }
 
 /* TV Shows */
@@ -66,4 +109,9 @@ main {
 /* Search Box */
 .search-box {
     width: 50rem;
+}
+
+/* Genre Bar */
+.genre {
+    padding-inline: 1.5rem;
 }
