--- a/src/style/global_style.css
+++ b/src/style/global_style.css
@@ -6,11 +6,19 @@
     --brand-font: "Playfair", serif;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: var(--body-font);
+@layer base {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: var(--body-font);
+    }
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
 }
 
 /* Overview */
@@ -31,11 +39,6 @@
     backdrop-filter: blur(5px);
 }
 
-/* RootLayout */
-main {
-    padding-block: 2rem;
-}
-
 /* Header */
 nav {
     padding-inline-start: 1rem;
@@ -44,7 +47,8 @@ nav {
 
 /* Categories */
 .category-page {
-    border: 2px solid black;
+    margin-block-start: 1.5rem;
+    padding: 1rem;
 }
 
 /* Home Page */
@@ -85,7 +89,7 @@ nav {
 
 .movie-case img:hover,
 .show-case img:hover {
-    border: 5px solid transparent;
+    border: 5px solid transparent !important;
 }
 
 /* TV Shows */
