--- a/src/style/global_style.css
+++ b/src/style/global_style.css
@@ -17,32 +17,20 @@
 
 html,
 body {
-    height: 100%;
     width: 100%;
 }
 
 /* Overview */
 .overview-page {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-image: url(/public/over.jpg);
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
-}
 
-.layer {
-    height: 100vh;
-    width: 100%;
-    background-color: rgba(174, 227, 252, 0.712);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-}
-
-/* Header */
-nav {
-    padding-inline-start: 1rem;
-    padding-inline-end: 3rem;
+    background-color: rgb(255, 255, 255);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 /* Categories */
@@ -82,7 +70,7 @@ nav {
 
 }
 
-.movie-case img,
+/* .movie-case img,
 .show-case img {
     transition: 0.3s;
 }
@@ -90,7 +78,7 @@ nav {
 .movie-case img:hover,
 .show-case img:hover {
     border: 5px solid transparent !important;
-}
+} */
 
 /* TV Shows */
 .shows-page {
